@@ -1,6 +1,7 @@
 launchpad-buildd (195) UNRELEASED; urgency=medium
 
   * sbuild-package: Temporarily remove lxd group membership (LP: #1820348).
+  * Tolerate missing "apt-get indextargets" on trusty.
 
  -- Colin Watson <cjwatson@ubuntu.com>  Fri, 05 Mar 2021 13:39:19 +0000
 
